M2 - add mock dataset generation
